# ComfyUI-Gemini-Prompt-Studio

./: LICENSE  README.md  __init__.py  gemini_studio.py  pyproject.toml  requirements.txt
examples/: T2I+I2V.json  TexttoImage.json
